--- a/index.html
+++ b/index.html
@@ -1,5 +1,22 @@
-Lolja tem roupas confortaveis e diversas, dentre elas, tem moletons, blusões, camisetas, camisetas ranglan, regatas, manga longa, 
-varias estampas tematicas variadas, de animes, series, filmes, jogos, e literaturas, basicas, comida e humor.
-Muitas cores, dentre elas, sõa amarelo, azul, bege, branco, lilas, azul marinho, preto, marrom e outras cores.
-Varios tamanhos:5-7 ANOS, PPP, PP, P M G 2G 3G 4G e tambem tem mais ou menos no total de 91 parceiros, varios criadores de conteudo e artistas.
-sempre tem lamçamento de estampas novas, e sempre tem alguma promoção ou cupom de desconto.a loja esta localizada em São Paulo, e tambem tem uma loja em Portugal
+<DOCTYPE HTML>
+
+<head>   
+   <meta charset="UTF-8">
+   <html long=" "pt-br">
+   <title> Lolja vista o extraordinario </title>
+</head>
+<body>
+    <html>
+        <h1>Lolja</h1>
+    <p>Lolja tem roupas confortaveis e diversas, dentre elas, tem moletons, blusões, camisetas, camisetas ranglan, regatas, manga longa, 
+    Varias estampas tematicas variadas, de animes, series, filmes, jogos, e literaturas, basicas, comida e humor.
+    Muitas cores, dentre elas, sõa amarelo, azul, bege, branco, lilas, azul marinho, preto, marrom e outras cores.
+    Varios tamanhos:5-7 ANOS, PPP, PP, P M G 2G 3G 4G e tambem tem mais ou menos no total de 91 parceiros, varios criadores de conteudo e artistas.
+    Sempre tem lamçamento de estampas novas, e sempre tem alguma promoção ou cupom de desconto.a loja esta localizada em São Paulo, e tambem tem uma loja em Portugal</p>
+     <ul>
+      <li>fone</li>
+      <li>endereço</li>
+      <li>e-mails</li>
+     </ul>
+    </html>
+</body>
