--- a/index.html
+++ b/index.html
@@ -3,17 +3,30 @@
  <head>   
    <meta charset="UTF-8">
    <html long=" "pt-br">
-   <title> Lolja vista o extraordinario </title>
+   <title> O Segredo Na Ilha </title>
  </head>
   <body>
         <h1>Lolja</h1>
-     <p>Lolja tem roupas confortaveis e diversas, dentre elas, tem moletons, blusões, camisetas, camisetas ranglan, regatas, manga longa, 
-      Varias estampas tematicas variadas, de animes, series, filmes, jogos, e literaturas, basicas, comida e humor.
-      Muitas cores, dentre elas, sõa amarelo, azul, bege, branco, lilas, azul marinho, preto, marrom e outras cores.
-     </p>
-      <p>
-       Varios tamanhos:5-7 ANOS, PPP, PP, P M G 2G 3G 4G e tambem tem mais ou menos no total de 91 parceiros, varios criadores de conteudo e artistas.
-       Sempre tem lamçamento de estampas novas, e sempre tem alguma promoção ou cupom de desconto.a loja esta localizada em São Paulo, e tambem tem uma loja em Portugal.
+     <p> O segredo na ilha é uma campanha Spin-off da série Ordem Paranormal interpretada pelos, streamers;
+         Cellbit (o mestre),Gabi Catuzzo, Matt, Beamon, Goularte e Raki.
+        Cellbit faz alguns NPCs da série, e narra tudo o que acontece, Gabi faz a Barbara Lima, Matt faz MIlo/Miguel; 
+        Beamom faz a Amelie Florence, Goularte faz Olivier Florence e Rakin faz  Wanderley Nascimento de Jesus Maria.
       </p>
+
+      <p>A campanha foi anunciada no dia 18 de junho  de 2022, e é uma das tres campanhas que estão por vir.
+         Tendo historias e personagens diferentes, da historia de Ordem Paranormal, e a cada episodia equivale a um dia na serie,
+          e cada episódio tem em media 5 horas, a temporada tem  8 episodios, sendo transmitido na Twitch no canal do cellbit,
+           e postado toda quarta no canal  Ordem Paranormal no Youtube.
+      </p>
+
+
+
+
+
+
+
+
+
+
   </body>
 </html
