alteração de texto

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <title> O Segredo Na Ilha </title>
  </head>
   <body>
-        <h1>OSNI</h1>
+        <h1>OSNI(O Segredo Na Ilha</h1>
      <p> O segredo na ilha é uma campanha Spin-off da série Ordem Paranormal interpretada pelos, streamers;
         Cellbit (o mestre),Gabi Catuzzo, Matt, Beamon, Goularte e Raki.
         Cellbit faz alguns NPCs da série, e narra tudo o que acontece, Gabi faz a Barbara Lima, Matt faz MIlo/Miguel; 
@@ -24,29 +24,29 @@
           Nos primeiros rascunhos o segredo na ilha era uma criatura enorme.
       </p>
       <p> Barbara Lima nasceu em 10 de outubro de 2000, ela passava a maior parte da sua infancia com seu melhor amigo, Miguel Castello, e tendo uma leve paixão de criança por ele.
-         Eles sempre viviam juntos ate Miguel simplesmente desaparecer, e com isso Milo amigo imaginario de Miguel, tomou “posse” do corpo dele, isso deixou Barbara abalada.
+          Eles sempre viviam juntos ate Miguel simplesmente desaparecer, e com isso Milo amigo imaginario de Miguel, tomou “posse” do corpo dele, isso deixou Barbara abalada.
       </p>
       <p> Miguel Castello Nasceu no dia 28 de junho de 2002, ele nasceu com uma mancha de polvo no seu braço, igual seu pai.
           e de tempos em tempos, tinha alucinações com um “amigo imaginário" chamado Milo, que apenas ele e seu pai podiam ver.
-         porém por volta de 2012, Miguel começou a sentir como se “a porta” que fazia ele se conectar com Milo, estava se fechando para sempre.
-         e tinha uma escolha, se desvincular de seu irmão para sempre, ou que seu amigo assumisse seu lugar permanentemente, 
-         e ele escolheu a segunda opção acreditando que Milo também deveria ter uma chance de viver uma vida.
+          porém por volta de 2012, Miguel começou a sentir como se “a porta” que fazia ele se conectar com Milo, estava se fechando para sempre.
+          e tinha uma escolha, se desvincular de seu irmão para sempre, ou que seu amigo assumisse seu lugar permanentemente, 
+          e ele escolheu a segunda opção acreditando que Milo também deveria ter uma chance de viver uma vida.
       </p>
       <p> Olivier Florence Nasceu em São Paulo em 25 de agosto de 2001.
-         em algum momento de sua vida ele acabou se acidentando, e machucando sua mão, por conta disso, ele se sentia excluído de seus amigos da escola, por acharem seu machucado estranho.
-         isso levou uma conversa entre ele e sua irmã, que reforçou a relação dos dois. 
+          em algum momento de sua vida ele acabou se acidentando, e machucando sua mão, por conta disso, ele se sentia excluído de seus amigos da escola, por acharem seu machucado estranho.
+          isso levou uma conversa entre ele e sua irmã, que reforçou a relação dos dois. 
       </p> 
-      <p>Amelie Florence Nasceu em Porto Alegre, no Rio Grande do Sul, em data desconhecida em 1999.
-         dois anos depois seu irmão Olivier nasceu, durante a sua infancia e adolecencia, Amelie sofria com pesadelos onde uma mulher de branco estava em um penhasco.
-         para tentar parar com isso ela dormia com seu pai, ate parar de ter os pesadelos.
-         porem um tempo depois ela teve novamente esse pesadelo, e ela foi pedir ajuda a seu pai, e ele ignorou completamente ela, dizendo que era uma historia boba,
-         isso fez ela criar um rancor enorme pelo seu pai, ao dormir e ter o pesadelo novamente, ela empurrou a mulher do penhasco, e parou de ter esses pesadelos.
+      <p> Amelie Florence Nasceu em Porto Alegre, no Rio Grande do Sul, em data desconhecida em 1999.
+          dois anos depois seu irmão Olivier nasceu, durante a sua infancia e adolecencia, Amelie sofria com pesadelos onde uma mulher de branco estava em um penhasco.
+          para tentar parar com isso ela dormia com seu pai, ate parar de ter os pesadelos.
+          porem um tempo depois ela teve novamente esse pesadelo, e ela foi pedir ajuda a seu pai, e ele ignorou completamente ela, dizendo que era uma historia boba,
+          isso fez ela criar um rancor enorme pelo seu pai, ao dormir e ter o pesadelo novamente, ela empurrou a mulher do penhasco, e parou de ter esses pesadelos.
       </p>
       <p> Wanderley Nascimento de Jesus Maria nasceu em Amargosa, na Bahia entre 1972 e 1982.
-         seu passado é desconhecido, mas sabe-se que ele tinha uma irmã que acabou falecendo por uma picada de cobra, mesmo ele tentando neutralizar o veneno com a boca, que infectou sua boca.
-         Ele era um guia turístico que trabalhava em um lugar chamado Lago Encantado,
-         e após acontecer coisas estranhas, um homem chamado Cavalcante Bueno, pede sua ajuda para mostrar o local, 
-         chegando la a agua estava vermelha e saiu uma figura parecida com uma mulher completamente ensanguentada, a figura matou diversas pessoas, mas Cavalcante junto com sua equipe conseguiram neutralizar a criatura,
+          seu passado é desconhecido, mas sabe-se que ele tinha uma irmã que acabou falecendo por uma picada de cobra, mesmo ele tentando neutralizar o veneno com a boca, que infectou sua boca.
+          Ele era um guia turístico que trabalhava em um lugar chamado Lago Encantado,
+          e após acontecer coisas estranhas, um homem chamado Cavalcante Bueno, pede sua ajuda para mostrar o local, 
+          chegando la a agua estava vermelha e saiu uma figura parecida com uma mulher completamente ensanguentada, a figura matou diversas pessoas, mas Cavalcante junto com sua equipe conseguiram neutralizar a criatura,
           e então Cavalcante apresentou a ordo realitas para Wanderley que aceitou o convite.
       </p>
   </body>
