alteração de texto

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <title> O Segredo Na Ilha </title>
  </head>
   <body>
-        <h1>OSNI(O Segredo Na Ilha</h1>
+        <h1>OSNI(O Segredo Na Ilha)</h1>
      <p> O segredo na ilha é uma campanha Spin-off da série Ordem Paranormal interpretada pelos, streamers;
         Cellbit (o mestre),Gabi Catuzzo, Matt, Beamon, Goularte e Raki.
         Cellbit faz alguns NPCs da série, e narra tudo o que acontece, Gabi faz a Barbara Lima, Matt faz MIlo/Miguel; 
