--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
         <h1>OSNI(O Segredo Na Ilha)</h1>
       <p> <strong>O segredo na ilha</strong> é uma campanha Spin-off da série <strong>Ordem Paranormal</strong> interpretada pelos, streamers;
-        Cellbit (o mestre),Gabi Catuzzo, Matt, Beamon, Goularte e Raki.
+        <em> Cellbit (o mestre),Gabi Catuzzo, Matt, Beamon, Goularte e Raki.</em>
         Cellbit faz alguns NPCs da série, e narra tudo o que acontece, Gabi faz a Barbara Lima, Matt faz MIlo/Miguel; 
         Beamom faz a Amelie Florence, Goularte faz Olivier Florence e Rakin faz  Wanderley Nascimento de jesus Maria.</p>
       <p>A campanha foi anunciada no dia 18 de junho  de 2022, e é uma das tres campanhas que estão por vir
