--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  </head>
   <body>
         <h1>OSNI(O Segredo Na Ilha)</h1>
-      <p> <strong>O segredo na ilha</strong> é uma campanha Spin-off da série <strong>Ordem Paranormal</strong> interpretada pelos, streamers;
+      <p style = front-size: 20px"> <strong>O segredo na ilha</strong> é uma campanha Spin-off da série <strong>Ordem Paranormal</strong> interpretada pelos, streamers;
         <em> Cellbit (o mestre),Gabi Catuzzo, Matt, Beamon, Goularte e Raki.</em>
         Cellbit faz alguns NPCs da série, e narra tudo o que acontece, Gabi faz a Barbara Lima, Matt faz MIlo/Miguel; 
         Beamom faz a Amelie Florence, Goularte faz Olivier Florence e Rakin faz  Wanderley Nascimento de jesus Maria.</p>
