--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <title> O Segredo Na Ilha </title>
  </head>
   <body>
-        <h1 style" text-aling: center">OSNI(O Segredo Na Ilha)</h1>
+        <h1<style" text-aling: center>OSNI(O Segredo Na Ilha)</h1>
       <p> <strong>O segredo na ilha</strong> é uma campanha Spin-off da série <strong>Ordem Paranormal</strong> interpretada pelos, streamers;
         <em> Cellbit (o mestre),Gabi Catuzzo, Matt, Beamon, Goularte e Raki.</em>
         Cellbit faz alguns NPCs da série, e narra tudo o que acontece, Gabi faz a Barbara Lima, Matt faz MIlo/Miguel; 
