--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
  </head>
   <body>
         <h1>OSNI(O Segredo Na Ilha)</h1>
-      <p> <strong>O segredo na ilha</strong> é uma campanha Spin-off da série <strong>Ordem Paranormal</strong> interpretada pelos, streamers;
-        <em> Cellbit (o mestre),Gabi Catuzzo, Matt, Beamon, Goularte e Raki.</em>
+      <p> <strong>O segredo na ilha</strong> é uma campanha Spin-off da série <strong>Ordem Paranormal</strong> interpretada pelos, streamers:
+          <ul>
+          <li>Cellbit (o mestre)</li>
+          <li>Gabi Catuzzo</li> 
+          <li>Matt,</li>
+          <li>Beamon,</li> 
+          <li>Goularte </li> 
+          li>Raki.</li> </ul>
         Cellbit faz alguns NPCs da série, e narra tudo o que acontece, Gabi faz a Barbara Lima, Matt faz MIlo/Miguel; 
         Beamom faz a Amelie Florence, Goularte faz Olivier Florence e Rakin faz  Wanderley Nascimento de jesus Maria.</p>
       <p>A campanha foi anunciada no dia 18 de junho  de 2022, e é uma das tres campanhas que estão por vir
