alteração de texto

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <li>Matt,</li>
           <li>Beamon,</li> 
           <li>Goularte </li> 
-          li>Raki.</li> </ul>
+          <li>Rakin.</li> </ul>
         Cellbit faz alguns NPCs da série, e narra tudo o que acontece, Gabi faz a Barbara Lima, Matt faz MIlo/Miguel; 
         Beamom faz a Amelie Florence, Goularte faz Olivier Florence e Rakin faz  Wanderley Nascimento de jesus Maria.</p>
       <p>A campanha foi anunciada no dia 18 de junho  de 2022, e é uma das tres campanhas que estão por vir
