adição de codigos

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
           <li>Beamon,</li> 
           <li>Goularte </li> 
           <li>Rakin.</li> </ul>
-        Cellbit faz alguns NPCs da série, e narra tudo o que acontece, Gabi faz a Barbara Lima, Matt faz MIlo/Miguel; 
-        Beamom faz a Amelie Florence, Goularte faz Olivier Florence e Rakin faz  Wanderley Nascimento de jesus Maria.</p>
+        Cellbit faz alguns NPCs da série, e narra tudo o que acontece, <em>Gabi faz a Barbara Lima, Matt faz MIlo/Miguel; 
+        Beamom faz a Amelie Florence, Goularte faz Olivier Florence e Rakin faz  Wanderley Nascimento de jesus Maria.</em></p>
       <p>A campanha foi anunciada no dia 18 de junho  de 2022, e é uma das tres campanhas que estão por vir
         Tendo historias e personagens diferentes, da historia de Ordem Paranormal, e a cada episodia equivale a um dia na serie,
-        e cada episódio tem em media 5 horas, a temporada tem  8 episodios, sendo transmitido na Twitch no canal do cellbit,
-        e postado toda quarta no canal  Ordem Paranormal no Youtube.</p>
+        e cada episódio tem em media 5 horas, a temporada tem  8 episodios, sendo transmitido na <strong>Twitch</strong> no canal do <strong>Cellbit</strong>,
+        e postado toda quarta no canal  <strong>Ordem Paranormal no Youtube</strong>.</p>
       <p> Em uma ilha isolada, tem uma enorme mansão, construida por um pintor que desapareceu há mais de 30 anos, 
         Um availiador de artes é contratado para ficar alguns dias na mansão para encontrar os quadros do pintor, 
         para isso ele decide levar sua famila na viagem, para passar mais tempo com a mesma, afinal nada ira acontecer.</p>
