--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
    <title> O Segredo Na Ilha </title>
  </head>
   <body>
+      <img src="osni.jpg">
         <h1>OSNI(O Segredo Na Ilha)</h1>
       <p> <strong>O segredo na ilha</strong> é uma campanha Spin-off da série <strong>Ordem Paranormal</strong> interpretada pelos, streamers:
           <ul>
